fixed a few critical issues spotted by Sonar: https://analysis.apache.org/drilldown/violations/37401?priority=CRITICAL
git-svn-id: https://svn.apache.org/repos/asf/camel/trunk@1137250 13f79535-47bb-0310-9956-ffa450edef68